<resources>
    <string name="app_name">SportApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="prompt_textlogin">Inicia Sesión</string>
    <string name="prompt_usuario">Usuario:</string>
    <string name="prompt_password">Contraseña:</string>
    <string name="action_sign_in">Continuar</string>
    <string name="action_send_strava">Enviar Datos</string>
    <string name="type_training">Tipo: </string>
    <string name="formatted_type_training">Tipo: %1$s</string>
    <string name="start_training">Iniciar</string>
    <string name="stop_training">Finalizar</string>
    <string name="prompt_completed_training">Entrenamiento finalizado!</string>
    <string name="prompt_total_time">Tiempo total:</string>
    <string name="prompt_date_training">Fecha: %1$s</string>
    <string name="prompt_cal_training">Calorías:</string>
    <string name="prompt_ftp_training">FTP: %1$s W</string>
    <string name="prompt_vo2_training">VO2max: %1$s ml/kg/min</string>
    <string name="save_training">Guardar Entrenamiento:</string>
    <string name="calendar_tittle">Calendario de eventos y entrenamientos</string>
    <string name="calendar_event_field">Evento</string>
    <string name="calendar_date_field">Fecha</string>
    <string name="calendar_description_field">Descripción</string>
    <string name="home_close_session">Cerrar Sesión</string>
    <string name="promt_start_training">Ejercicio iniciado.!!!</string>
    <string name="promt_finish_training">Ejercicio finalizado.!!!</string>
    <string name="promt_data_sended">Datos Enviados!!!</string>
    <string name="units_minutes">min.</string>
    <string name="boton_finish">FTP Vo2Max</string>
    <string name="tittle_suggestions">Sugerencias</string>
    <string name="training_objectives">Objetives</string>
    <string name="training_duration">Duration</string>
    <string name="training_excercises">Exercises</string>
    <string name="training_description">Plan</string>
    <string name="event_description">Evento</string>
    <string name="event_name">Nombre</string>
    <string name="event_date">Fecha</string>
    <string name="event_fee">Costo</string>
    <string name="prompt_dashboard_tittle">Mis Sesiones de Entrenamiento</string>
    <string name="dashboard_plans_tittle">Mis Planes de Entrenamiento</string>
    <string name="dash_date">Fecha</string>
    <string name="dash_duration">Duración</string>
    <string name="dash_type">Tipo</string>
    <string name="dash_notes">Notas</string>
    <string name="promt_device_title">Iniciar Dispositivo Medición</string>
    <string name="promt_device">Dispositivo:</string>
    <string name="device">Reloj Digital</string>
    <string name="start_device">Iniciar Medición</string>
    <string name="title_suggests">Sugerencias</string>
    <string name="tittle_suggest_routes">Rutas Sugeridas</string>
    <string name="calculation_success">Calculo de FTP y VO2MAX fue exitoso!</string>
    <string name="error_calling_service">Error llamando al servicio. Codigo de error: %1$d</string>
    <string name="error_generic">Un error ha ocurrido.</string>
    <string name="error_finishing_session">Error finalizando la sesion. Codigo de error: %1$d</string>
    <string name="training_session_finished">Sesion de entrenamiento finalizada exitosamente!</string>
    <string name="type_run">Tipo: %1$s</string>
    <string name="total_time">Tiempo total: %1$d min</string>
    <string name="calories_burned">Calorias quemadas: %1$d</string>
    <string name="services_tittle">Titulo del servicio</string>
    <string name="service_name_field">Nombre del servicio</string>
    <string name="service_rate_field">Precio del servicio</string>
    <string name="service_status_field">Estado del servicio</string>
    <string name="error_starting_session">Error iniciando sesion</string>
    <string name="training_type">Tipo de entrenamiento</string>
    <string name="duration">Duracion</string>
    <string name="end_date">Fecha</string>
    <string name="notes">Notas</string>
    <string name="suggestions_title">Sugerencias</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="calendar_title">Titulo</string>
    <string name="dismiss_icon_desc">Dismiss</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="get_strava_info">Get Strava Info</string>
    <string name="connect_strava">Connect To Strava</string>
    <string name="device_steps">Pasos:</string>
    <string name="device_powerOutpt">Potencia de salida:</string>
    <string name="device_maxHeartRate">Frec. Card. Maxima :</string>
    <string name="device_restingHeartRate">Frec. Card. Reposo :</string>
    <string name="sendData_success">Datos enviados con exito!</string>
    <string name="column_description">Descripcion</string>
    <string name="column_duration">Duracion</string>
    <string name="column_frequency">Frecuencia</string>
    <string name="column_objectives">Objetivos</string>
</resources>