<!-- item_layout_trainings_header.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    android:elevation="2dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/training_type" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/duration" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/end_date" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/notes" />

</LinearLayout>
