<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/training_description"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/training_duration"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/training_excercises"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:gravity="center" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/training_objectives"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:gravity="center" />

</LinearLayout>
