<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".HomeActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorPrimary">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivSugerencias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/sugerencias"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Suggestions"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/home"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Home"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivCalendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/calendario"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Calendar"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/notificaciones"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Notifications"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>

        <!-- Main Content -->
        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:background="@color/colorBackground">

            <TextView
                android:id="@+id/tvwTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_completed_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/type_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwTimeTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_total_time"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwDateTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_date_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwCalTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_cal_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwFTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_ftp_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvwVO2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/prompt_vo2_training"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="normal"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStart"
                android:layout_width="226dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="100dp"
                android:backgroundTint="?attr/colorPrimary"
                android:fontFamily="@font/lato_bold_font"
                android:text="@string/boton_finish"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent" />
        </FrameLayout>

        <!-- Bottom Menu -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorPrimary">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivRun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/run"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Run"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivClockW"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/calend_clock"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Clock"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivRunExe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/start_exe"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Run Exe"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ivWatch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                app:icon="@drawable/watch"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@android:color/white"
                android:text="Watch"
                android:textColor="@android:color/white"
                android:fontFamily="@font/lato_bold_font"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>